# capturestudio-annotate

./: .gitignore  README.md  main.py  next.config.js  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/(annotate)/annotate/: layout.tsx  loading.tsx  page.tsx
app/api/classes/: route.ts
app/api/detect/: route.ts
app/api/detections/delete/: route.ts
app/api/detections/get/: route.ts
app/api/detections/rotate/: route.ts
app/api/detections/upsert/: route.ts
app/api/frames/: route.ts
app/api/image/: route.ts
app/api/mask/: route.ts
app/api/mask/file2/: route.ts
app/api/mask/get/: route.ts
app/api/segment/: route.ts
app/api/session/: route.ts
app/playground/: page.tsx
components/common/: ConfirmDialog.tsx  Spinner.tsx  Toast.tsx
components/editor/: AnnotationCanvas.tsx  BBoxListPanel.tsx  ImageEditor.tsx  MaskOverlay.tsx  PointsListPanel.tsx  SegmentButton.tsx  Toolbar.tsx
components/grid/: CameraGrid.tsx  CameraThumb.tsx
components/layout/: AppShell.tsx  Header.tsx
components/sidebar/: ClassColorSwatch.tsx  ClassSidebar.tsx
components/timeline/: TimestampBadge.tsx  TimestampStrip.tsx
components/ui/: switch.tsx
lib/: detect.ts  paths.ts  sam2.ts  utils.ts
lib/fs/: detections.ts  rotation.ts
lib/images/: exif.ts  transforms.ts
lib/io/: atomic.ts
python_backend/: pyproject.toml  run.py
python_backend/app/: inference.py  main.py  models.py
store/: useClasses.ts  useDetections.ts  useEditor.ts  useSession.ts
types/: api.ts  detections.ts  session.ts
